# flask-ddd

./: .coveragerc  .gitignore  .pylintrc  README.md  app.py  manage.py  models.py  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  conftest.py  containers.py
app/admin/domain/: category_form.py  product_form.py
app/admin/views/: __init__.py
app/cart/application/: add_cart_service.py
app/cart/domain/: cart.py  cart_repository.py
app/cart/views/: views.py
app/catalog/application/: category_product_page.py  no_category_exception.py  product_service.py
app/catalog/domain/: category.py  category_repository.py  product.py  product_repository.py
app/catalog/tests/: test_models.py
app/catalog/ui/: __init__.py
app/catalog/views/: __init__.py  no_category_error.py
app/category/domain/: category.py
app/common/model/: page.py
app/order/: conftest.py
app/templates/: base.html  base.html.j2  footer.html.j2  home.html  home.html.j2  login.html  navi.html  navi.html.j2  signin.html
app/tests/: conftest.py  utils.py
app/utils/: sqlalchemy_views.py
config/: __init__.py  development.py  production.py  staging.py  testing.py
migrations/versions/: 0047f3e117ad_.py  01b6c5768831_.py  0fd97196e97d_.py  1638ae2a6871_.py  2b309edd9bf0_.py  366ee4dc6f2e_.py  600e9697a9ea_.py  6ba33d4e14b9_.py  6f07c1403dcb_.py  6f94e9bd91ed_.py  91d1c0880b18_.py  9d61a725bbf2_.py  9f4e917e2d82_.py  a745764443df_.py  ca4d62cfcf2a_.py  cda038dd6750_.py  cdcafae2a8f6_.py  ece2303136e5_.py  f45f964add47_.py
order/domain/: order.py  orderer.py  shipping_info.py
(+100 files in other folders)
