[tool.poetry]
name = "flask-ddd"
version = "0.1.0"
description = "This repository for trying ddd using flask"
authors = ["amazingguni <amazingguni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.7.0"
Flask-Script = "^2.0.6"
Flask-Cors = "^3.0.10"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
SQLAlchemy-Utils = "^0.36.8"
SQLAlchemy = "^1.4.5"
pytest-mock = "^3.5.1"
dependency-injector = "^4.31.2"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
coverage = "^5.5"
pytest = "^6.2.2"
autopep8 = "^1.5.6"
blinker = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
